# BERTopic

./: .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  algorithm.html  changelog.html  delete_topics_test_sc.ipynb  dev_test_sc.ipynb  faq.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  ruff.toml  setup.py  sitemap.xml  test  usecases.html
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint.yml  testing.yml
algorithm/: algorithm.html
api/: backends.html  bertopic.html  cluster copy.html  cluster.html  ctfidf.html  dimensionality.html  mmr.html  onlinecv.html  plotting.html  representations.html  vectorizers.html
api/backends/: base.html  cohere.html  openai.html  word_doc.html
api/cluster/: base.html
api/dimensionality/: base.html
api/plotting/: barchart.html  distribution.html  document_datamap.html  documents.html  dtm.html  heatmap.html  hierarchical_documents.html  hierarchy.html  term.html  topics.html  topics_per_class.html
api/representation/: base.html  cohere.html  generation.html  keybert.html  langchain.html  mmr.html  openai.html  pos.html  zeroshot.html
bertopic/: __init__.py  _bertopic.py  _corpus.py  _ctfidf.py  _embeddings.py  _mmr.py  _save_utils.py  _topics.py  _utils.py  _vision_utils.py  ctfidf.py  embeddings.py  languages.py  model.py  utils.py
bertopic/backend/: __init__.py  _base.py  _cohere.py  _fastembed.py  _flair.py  _gensim.py  _hftransformers.py  _langchain.py  _model2vec.py  _multimodal.py  _openai.py  _sentencetransformers.py  _sklearn.py  _spacy.py  _use.py  _utils.py  _word_doc.py
bertopic/backends/: __init__.py  _base.py  _sentencetransformers.py
bertopic/cluster/: __init__.py  _base.py  _utils.py
bertopic/dimensionality/: __init__.py  _base.py
bertopic/plotting/: __init__.py  _approximate_distribution.py  _barchart.py  _datamap.py  _distribution.py  _documents.py  _heatmap.py  _hierarchical_documents.py  _hierarchy.py  _term_rank.py  _topics.py  _topics_over_time.py  _topics_per_class.py  _utils.py
bertopic/representation/: __init__.py  _base.py  _bm42.py  _cohere.py  _keybert.py  _langchain.py  _litellm.py  _llamacpp.py  _mmr.py  _ollama.py  _openai.py  _pos.py  _prompts.py  _textgeneration.py  _utils.py  _visual.py  _zeroshot.py
bertopic/variations/: __init__.py  _distribution.py  _guided.py  _hierarchy.py  _outliers.py  _topics_over_time.py  _topics_per_class.py  _zeroshot.py
bertopic/vectorizers/: __init__.py  _ctfidf.py  _online_cv.py
docs/: algorithm.md  api.rst  changelog.md  conf.py  faq.md  index.md  index.rst  usecases.md
docs/algorithm/: algorithm.md
docs/api/: backends.md  bertopic.md  cluster copy.md  ctfidf.md  dimensionality.md  mmr.md  onlinecv.md  plotting.md  representations.md  vectorizers.md
docs/img/: probabilities.html
docs/stylesheets/: extra.css
getting_started/best_practices/: best_practices.html
getting_started/clustering/: clustering.html
getting_started/countvectorizer/: countvectorizer.html
getting_started/ctfidf/: ctfidf.html
getting_started/custom_embeddings/: embeddings.html
getting_started/dim_reduction/: dim_reduction.html
getting_started/distribution/: distribution.html  distribution_viz.html
getting_started/embeddings/: embeddings.html
getting_started/guided/: guided.html
getting_started/hierarchicaltopics/: hierarchicaltopics.html
getting_started/manual/: manual.html
getting_started/merge/: merge.html
getting_started/models/: models.html
getting_started/multiaspect/: multiaspect.html
getting_started/multimodal/: multimodal.html
getting_started/online/: online.html
getting_started/outlier_reduction/: fig_base.html  fig_reduced.html  outlier_reduction.html
getting_started/parameter tuning/: parametertuning.html
getting_started/quickstart/: quickstart.html
getting_started/representation/: llm.html  representation.html
getting_started/search/: search.html
getting_started/seed_words/: seed_words.html
getting_started/semisupervised/: semisupervised.html
getting_started/serialization/: serialization.html
getting_started/supervised/: supervised.html
getting_started/tips_and_tricks/: tips_and_tricks.html
getting_started/topicreduction/: topicreduction.html
getting_started/topicrepresentation/: topicrepresentation.html
getting_started/topicsovertime/: topicsovertime.html
getting_started/topicsperclass/: topicsperclass.html
getting_started/vectorizers/: vectorizers.html
getting_started/visualization/: bar_chart.html  datamapplot.html  documents.html  hierarchical_documents.html  hierarchical_topics.html  hierarchy.html  probabilities.html  term_rank.html  term_rank_log.html  topics_per_class.html  visualization.html  visualize_documents.html  visualize_hierarchy.html  visualize_terms.html  visualize_topics.html
getting_started/zeroshot/: zeroshot.html
img/: probabilities.html
notebooks/: BERTopic.ipynb  Corona_NLP_test.csv  Topic_with_BERT.ipynb  test_issues.ipynb
search/: search_index.json
src/: model.py  utils.py
stylesheets/: extra.css
tests/: conftest.py  test_bertopic.py  test_model.py  test_models.py  test_other.py  test_spacy.py  test_topic_representation.py  test_utils.py
tests/test_plotting/: test_approximate.py  test_bar.py  test_documents.py  test_dynamic.py  test_heatmap.py  test_term_rank.py  test_topics.py
tests/test_reduction/: test_delete.py  test_merge.py
tests/test_representation/: test_get.py  test_labels.py  test_representations.py
tests/test_sub_models/: test_cluster.py  test_dim_reduction.py  test_embeddings.py  test_mmr.py
tests/test_variations/: test_class.py  test_dynamic.py  test_hierarchy.py  test_zeroshot.py
tests/test_vectorizers/: test_ctfidf.py  test_online_cv.py
tutorial/algorithm/: algorithm.html
(+111 files in other folders)
